--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
     <string name="PasswordComparisonError">Пароли не совпадают!</string>
     <string name="EmptyFieldsError">Заполните все поля!</string>
     <string name="EmailFormatError">Неправильный формат e-mail!</string>
+    <string name="AppVersion">v 0.1</string>
 </resources>
