--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -76,4 +76,5 @@
     <string name="EmptyFieldsError">Заполните все поля!</string>
     <string name="EmailFormatError">Неправильный формат e-mail!</string>
     <string name="AppVersion">v 0.1</string>
+    <string name="inDev">В разработке</string>
 </resources>
