--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
     <string name="heisei">Хэйсэй</string>
     <string name="reiwa">Рэйва</string>
     <string name="general">Общий тест</string>
-<!--    Other-->
+    <!--    Other-->
     <string name="recoveringText">На указанный адрес почты будет отправлена ссылка для восстановления пароля</string>
     <string name="PasswordError">Пароль должен содержать хотя бы одну букву в нижнем и в верхнем регистре, цифру и специальный символ, длина как минимум 8 символов!</string>
     <string name="LoginError">Логин может состоять из букв латинского алфавита верхнего и нижнего регистра, цифр, символов подчеркивания (_) и дефисов (-), и иметь длину от 3 до 20 символов!</string>
@@ -76,4 +76,5 @@
     <string name="EmptyFieldsError">Заполните все поля!</string>
     <string name="EmailFormatError">Неправильный формат e-mail!</string>
     <string name="AppVersion">v 0.1</string>
+    <string name="inDev">В разработке</string>
 </resources>
