History done, celebrates started, user remember done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <!--    App name-->
     <string name="app_name">Nihon History</string>
+    <string name="AppVersion">v 0.1</string>
     <!--    Buttons text-->
     <string name="recovery2">Восстановить</string>
     <string name="test">Тест</string>
@@ -45,6 +46,7 @@
     <string name="celebrationNameExample">Праздник</string>
     <string name="percentsExample">60%</string>
     <string name="dateValue">24.04.2024</string>
+    <string name="inDev">В разработке</string>
     <!--    Navigation drawer elements text-->
     <string name="profile">Профиль</string>
     <string name="settings">Настройки</string>
@@ -60,7 +62,7 @@
     <string name="heyan">Хэйан</string>
     <string name="kamakura">Камакура</string>
     <string name="muromachi">Муромати</string>
-    <string name="azuchi_momoyama">Адзути- Момояма</string>
+    <string name="azuchi_momoyama">Адзути-Момояма</string>
     <string name="edo">Эдо</string>
     <string name="meiji">Мэйдзи</string>
     <string name="taisho">Тайсё</string>
@@ -68,6 +70,17 @@
     <string name="heisei">Хэйсэй</string>
     <string name="reiwa">Рэйва</string>
     <string name="general">Общий тест</string>
+    <!--    Period of epochs-->
+    <string name="iwajukuPeriod">\??? – 13 тыс. до н.э.</string>
+    <string name="jomonPeriod">13 тыс. до н.э. – III век до н.э.</string>
+    <string name="yayoiPeriod">III век до н.э. – 250 г. н.э.</string>
+    <string name="yamatoPeriod">250 – 710 гг.</string>
+    <string name="naraPeriod">710 – 794 гг.</string>
+    <string name="heyanPeriod">794 – 1185 гг.</string>
+    <string name="kamakuraPeriod">1185 – 1333 гг.</string>
+    <string name="muromachiPeriod">1333 – 1568 гг.</string>
+    <string name="azuchi_momoyamaPeriod">1568 – 1600 гг.</string>
+    <string name="generalPeriod">\??? – 1600 гг.</string>
     <!--    Other-->
     <string name="recoveringText">На указанный адрес почты будет отправлена ссылка для восстановления пароля</string>
     <string name="PasswordError">Пароль должен содержать хотя бы одну букву в нижнем и в верхнем регистре, цифру и специальный символ, длина как минимум 8 символов!</string>
@@ -75,6 +88,6 @@
     <string name="PasswordComparisonError">Пароли не совпадают!</string>
     <string name="EmptyFieldsError">Заполните все поля!</string>
     <string name="EmailFormatError">Неправильный формат e-mail!</string>
-    <string name="AppVersion">v 0.1</string>
-    <string name="inDev">В разработке</string>
+
+
 </resources>
