--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <!--    App name-->
     <string name="app_name">Nihon History</string>
-    <string name="AppVersion">v 0.1</string>
+    <string name="appVersion">v 0.1</string>
     <!--    Buttons text-->
     <string name="recovery2">Восстановить</string>
     <string name="test">Тест</string>
@@ -84,11 +84,15 @@
     <string name="generalPeriod">\??? – 1600 гг.</string>
     <!--    Other-->
     <string name="recoveringText">На указанный адрес почты будет отправлена ссылка для восстановления пароля</string>
-    <string name="PasswordError">Пароль должен содержать хотя бы одну букву в нижнем и в верхнем регистре, цифру и специальный символ, длина как минимум 8 символов!</string>
-    <string name="LoginError">Логин может состоять из букв латинского алфавита верхнего и нижнего регистра, цифр, символов подчеркивания (_) и дефисов (-), и иметь длину от 3 до 20 символов!</string>
-    <string name="PasswordComparisonError">Пароли не совпадают!</string>
-    <string name="EmptyFieldsError">Заполните все поля!</string>
-    <string name="EmailFormatError">Неправильный формат e-mail!</string>
+    <string name="passwordError">Пароль должен содержать хотя бы одну букву в нижнем и в верхнем регистре, цифру и специальный символ, длина как минимум 8 символов!</string>
+    <string name="loginError">Логин может состоять из букв латинского алфавита верхнего и нижнего регистра, цифр, символов подчеркивания (_) и дефисов (-), и иметь длину от 3 до 20 символов!</string>
+    <string name="passwordComparisonError">Пароли не совпадают!</string>
+    <string name="emptyFieldsError">Заполните все поля!</string>
+    <string name="emailFormatError">Неправильный формат e-mail!</string>
+    <string name="recoverySuccessfullySend">Email с инструкциями по восстановлению пароля отправлен!</string>
+    <string name="recoveryFailedSend">Ошибка отправки email: %1$s</string>
+    <string name="incorrectLogin">Данные не подходят!</string>
+    <string name="emptyFields">Заполните пустые поля!</string>
 
 
 </resources>
